Implementation of JWT middleware
