# boot/common_service_entry.go
@@ -51,6 +51,10 @@ var (
 // @in header
 // @name X-API-Key
 
+// @securityDefinitions.apikey JWT
+// @in header
+// @name Authorization
+
 // @schemes http https
 
 // BootConfigCommonService Bootstrap config of common service.
@@ -236,6 +240,7 @@ func doHealthy(*ghttp.Request) *rkentry.HealthyResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.HealthyResponse
 // @Router /rk/v1/healthy [get]
@@ -266,6 +271,7 @@ func doGc(*ghttp.Request) *rkentry.GcResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.GcResponse
 // @Router /rk/v1/gc [get]
@@ -289,6 +295,7 @@ func doInfo(*ghttp.Request) *rkentry.ProcessInfo {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.ProcessInfo
 // @Router /rk/v1/info [get]
@@ -328,6 +335,7 @@ func doConfigs(*ghttp.Request) *rkentry.ConfigsResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.ConfigsResponse
 // @Router /rk/v1/configs [get]
@@ -394,6 +402,7 @@ func doApis(ctx *ghttp.Request) *rkentry.ApisResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.ApisResponse
 // @Router /rk/v1/apis [get]
@@ -425,6 +434,7 @@ func doSys(*ghttp.Request) *rkentry.SysResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.SysResponse
 // @Router /rk/v1/sys [get]
@@ -496,6 +506,7 @@ func doReq(ctx *ghttp.Request) *rkentry.ReqResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @success 200 {object} rkentry.ReqResponse
 // @Router /rk/v1/req [get]
@@ -562,6 +573,7 @@ func doEntries(*ghttp.Request) *rkentry.EntriesResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.EntriesResponse
 // @Router /rk/v1/entries [get]
@@ -619,6 +631,7 @@ func doCerts(*ghttp.Request) *rkentry.CertsResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.CertsResponse
 // @Router /rk/v1/certs [get]
@@ -693,6 +706,7 @@ func doLogs(ctx *ghttp.Request) *rkentry.LogsResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.LogsResponse
 // @Router /rk/v1/logs [get]
@@ -726,6 +740,7 @@ func getEntry(ctx *ghttp.Request) *GfEntry {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.DepResponse
 // @Router /rk/v1/deps [get]
@@ -758,6 +773,7 @@ func doDeps(*ghttp.Request) *rkentry.DepResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.LicenseResponse
 // @Router /rk/v1/license [get]
@@ -790,6 +806,7 @@ func doLicense(*ghttp.Request) *rkentry.LicenseResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.ReadmeResponse
 // @Router /rk/v1/readme [get]
@@ -822,6 +839,7 @@ func doReadme(ctx *ghttp.Request) *rkentry.ReadmeResponse {
 // @version 1.0
 // @Security ApiKeyAuth
 // @Security BasicAuth
+// @Security JWT
 // @produce application/json
 // @Success 200 {object} rkentry.GitResponse
 // @Router /rk/v1/git [get]
